objects/AE_Acknowledgement_Flow__c.object
<CustomObject>
    <description>This object is created for AE Acknowledgement Letter process flow and to be used in AE ack. process development.</description>
    <fields>
        <fullName>AE_Ack_Letter_URL__c</fullName>
        <inlineHelpText>Click on the URL to view your letter</inlineHelpText>
        <label>AE Ack Letter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_year__c</fullName>
        <label>Acknowledgement year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Used to set a due date for acknowledging the letter</description>
        <inlineHelpText>Set a due date for the person to acknowledge</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Login__c</fullName>
        <label>Employee Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <description>Use to track the status of the record sent for acknowledgement to the AE</description>
        <label>Record Status</label>
        <picklist>
            <picklistValues>
                <fullName>Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uploaded</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used only in trigger to know the new record inserted when If the old record has status as Uploaded or Pending and new record for the same user for the same year is being uploaded, we will overwrite the previous record. for distinguishing between the 2 records.</description>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>AE Acknowledgement Flow</label>
    <listViews>
        <fullName>AEAdmins_AP_AE_Acknowledgement_Flow</fullName>
        <columns>NAME</columns>
        <columns>Acknowledgement_year__c</columns>
        <columns>AE_Ack_Letter_URL__c</columns>
        <columns>Employee_Login__c</columns>
        <columns>Record_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Template__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>AEAdmins_AP</label>
        <language>en_US</language>
        <queue>AEAdmins_AP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AEAdmins_EMEA_AE_Acknowledgement_Flow</fullName>
        <columns>NAME</columns>
        <columns>Acknowledgement_year__c</columns>
        <columns>AE_Ack_Letter_URL__c</columns>
        <columns>Employee_Login__c</columns>
        <columns>Record_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Template__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>AEAdmins_EMEA</label>
        <language>en_US</language>
        <queue>AEAdmins_EMEA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AEAdmins_India_AE_Acknowledgement_Flow</fullName>
        <columns>NAME</columns>
        <columns>Acknowledgement_year__c</columns>
        <columns>AE_Ack_Letter_URL__c</columns>
        <columns>Employee_Login__c</columns>
        <columns>Record_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Template__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Queue</filterScope>
        <label>AEAdmins_India</label>
        <language>en_US</language>
        <queue>AEAdmins_India</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AEAdmins_Japan_AE_Acknowledgement_Flow</fullName>
        <filterScope>Queue</filterScope>
        <label>AEAdmins_Japan</label>
        <queue>AEAdmins_Japan</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AEAdmins_NA_AE_Acknowledgement_Flow</fullName>
        <columns>Record_Status__c</columns>
        <columns>Acknowledgement_year__c</columns>
        <columns>Employee_Login__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Reminder_Date__c</columns>
        <columns>Region__c</columns>
        <columns>Template__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Record_Status__c</field>
            <operation>notEqual</operation>
            <value>Acknowledged</value>
        </filters>
        <label>AEAdmins_NA</label>
        <language>en_US</language>
        <queue>AEAdmins_NA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Acknowledgement_year__c</columns>
        <columns>AE_Ack_Letter_URL__c</columns>
        <columns>Employee_Login__c</columns>
        <columns>Record_Status__c</columns>
        <columns>Region__c</columns>
        <columns>Template__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isDeleted__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AE-{00000000}</displayFormat>
        <label>AE Acknowledgement Flow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Acknowledgement Flows</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>AE_Employees_Access__c</fullName>
        <label>AE Employees Access</label>
    </sharingReasons>
</CustomObject>